--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "module_minc_keras"]
 	path = module_minc_keras
 	url = https://github.com/WenjayDu/minc_keras.git
+[submodule "module_pocketflow"]
+	path = module_pocketflow
+	url = https://github.com/Tencent/PocketFlow.git
